--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.70.5",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-select-dropdown": "^3.2.1",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
